# tate

./: .gitignore  Cargo.toml  README.md  SPEC.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  deploy-web.yml  release.yml
crates/tate-cli/: Cargo.toml
crates/tate-cli/src/: add.rs  common.rs  config_cmd.rs  init.rs  list.rs  main.rs  own.rs  review_cmd.rs  status.rs  themes.rs
crates/tate-cli/tests/: integration.rs
crates/tate-core/: Cargo.toml
crates/tate-core/src/: card.rs  ease.rs  entry.rs  grade.rs  lib.rs  review.rs  sm2.rs
crates/tate-hooks/: Cargo.toml
crates/tate-hooks/src/: lib.rs  post_commit.rs
crates/tate-review/: Cargo.toml
crates/tate-review/src/: change.rs  error.rs  highlight.rs  lib.rs  shell.rs  terminal.rs
crates/tate-store/: Cargo.toml
crates/tate-store/src/: config.rs  db.rs  deck.rs  error.rs  lib.rs
crates/tate-symbols/: Cargo.toml
crates/tate-symbols/src/: error.rs  languages.rs  lib.rs  resolver.rs
skills/tate/: SKILL.md
src/: cli.ts  entry.ts  index.ts  store.ts  symbols.ts
src/__tests__/: entry.test.ts  store.test.ts
web/: config.toml
web/content/: _index.md
web/content/docs/: _index.md  agent-skill.md  configuration.md  deck-format.md  installation.md  symbol-resolution.md  usage.md
web/sass/: _animations.scss  _callout.scss  _docs.scss  _features.scss  _footer.scss  _hero.scss  _layout.scss  _nav.scss  _reset.scss  _sidebar.scss  _terminal.scss  _tokens.scss  _typography.scss  style.scss
web/static/: CNAME  scroll-reveal.js
web/templates/: base.html  index.html  page.html  section.html
web/templates/shortcodes/: callout.html  terminal.html
