[package]
name = "tate-store"
version = "0.1.0"
edition = "2021"

[dependencies]
tate-core = { path = "../tate-core" }
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
blake3 = "1"
tracing = "0.1"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
