[package]
name = "tate-symbols"
version = "0.1.0"
edition = "2021"

[dependencies]
tate-core = { path = "../tate-core" }
tree-sitter = "0.25"
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-clojure = "0.1"
tree-sitter-cpp = "0.23"
tree-sitter-dart = "0.1"
tree-sitter-elixir = "0.3"
tree-sitter-gleam = "1.0"
tree-sitter-go = "0.25"
tree-sitter-haskell = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-julia = "0.23"
tree-sitter-lua = "0.5"
tree-sitter-ocaml = "0.24"
tree-sitter-odin = "1.3"
tree-sitter-php = "0.24"
tree-sitter-python = "0.25"
tree-sitter-r = "1.2"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-scala = "0.25"
tree-sitter-swift = "0.7"
tree-sitter-typescript = "0.23"
tree-sitter-zig = "1.1"
blake3 = "1"
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
